--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,10 @@
-<label  for="test" class="form-label">Busqueda:</label>
-<input  type="text"
-        [placeholder]="placeholder"
-        class="form-control"
-        id="test"
-        (keyup.enter)="emitValue( txtInput.value )"
-        #txtInput>
+<label for="test" class="form-label">Busqueda:</label>
+<input type="text"
+  [value]="initialValue"
+  [placeholder]="placeholder"
+  class="form-control"
+  id="test"
+  (keyup)="onKeyPress(txtInput.value)"
+  #txtInput>
+
+  <!-- (keyup.enter)="emitValue( txtInput.value )" -->
