--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -33,13 +33,13 @@
     <div class="col">
       <h3>Traducciones</h3>
       <div class="d-flex flex-wrap">
-        <span class="badge bg-primary m-1">{{country.translations['ara']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['bre']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['ces']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['cym']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['deu']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['est']?.common}}</span>
-        <span class="badge bg-primary m-1">{{country.translations['fin']?.common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['ara'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['bre'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['ces'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['cym'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['deu'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['est'].common}}</span>
+        <span class="badge bg-primary m-1">{{country.translations['fin'].common}}</span>
       </div>
     </div>
   </div>
